home content mapped out on home page web.php routes created for all intnetned pages navbar vue component created tailwindcss with purgecss integrated and tested working

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,6 +21,18 @@ h4 {
 p {
 	@apply leading-loose mb-2;
 }
+ul {
+	list-style-type: circle;
+	padding-left: theme('padding.4');
+  }
+  
+  ol {
+	list-style-type: decimal;
+	padding-left: theme('padding.4');
+  }
+li {
+	@apply leading-loose mb-2;
+}
 a {
 @apply text-blue-600 underline;
 }
