--- a/public/css/app.css
+++ b/public/css/app.css
@@ -624,6 +624,21 @@ p {
   margin-bottom: 0.5rem;
 }
 
+ul {
+  list-style-type: circle;
+  padding-left: 1rem;
+}
+
+ol {
+  list-style-type: decimal;
+  padding-left: 1rem;
+}
+
+li {
+  line-height: 2;
+  margin-bottom: 0.5rem;
+}
+
 a {
   color: #3182ce;
   text-decoration: underline;
